testdata/snapshots/hgrep__tests__ripgrep_config__bool_long_flags.snap
---
source: src/main.rs
expression: cfg
---
Config {
    min_context: 3,
    max_context: 6,
    no_ignore: true,
    hidden: true,
    case_insensitive: false,
    smart_case: true,
    globs: [],
    glob_case_insensitive: true,
    fixed_strings: true,
    word_regexp: false,
    follow_symlink: true,
    multiline: true,
    crlf: true,
    multiline_dotall: true,
    mmap: true,
    max_count: None,
    max_depth: None,
    max_filesize: None,
    line_regexp: true,
    pcre2: false,
    types: [],
    types_not: [],
    invert_match: false,
    one_file_system: true,
    no_unicode: true,
    regex_size_limit: None,
    dfa_size_limit: None,
}
