testdata/snapshots/hgrep__tests__ripgrep_config__bool_short_flags.snap
---
source: src/main.rs
expression: cfg
---
Config {
    min_context: 3,
    max_context: 6,
    no_ignore: false,
    hidden: true,
    case_insensitive: false,
    smart_case: true,
    globs: [],
    glob_case_insensitive: false,
    fixed_strings: true,
    word_regexp: false,
    follow_symlink: true,
    multiline: true,
    crlf: false,
    multiline_dotall: false,
    mmap: false,
    max_count: None,
    max_depth: None,
    max_filesize: None,
    line_regexp: true,
    pcre2: false,
    types: [],
    types_not: [],
    invert_match: false,
    one_file_system: false,
    no_unicode: false,
    regex_size_limit: None,
    dfa_size_limit: None,
}
